# pdv

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml  schema.sql
docs/: back-end_functions.txt  back-end_functions_essencials.txt  index-pdv.txt
docs/functions/: function_client.txt  function_client_adm.txt  function_manager.txt
src/: database.py  main.py
src/models/: __init__.py  product.py  sale.py  sale_item.py  user.py
src/routes/: __init__.py  auth.py  products.py  reports.py  sales.py
src/schemas/: __init__.py  product.py  report.py  sale.py  user.py
src/services/: __init__.py  auth_service.py  product_service.py  report_service.py  sale_service.py
src/tests/: test_auth.py  test_products.py
